log

Fri 18 Aug 2023 10:20:17 PM UTC: 
 exercises.c | 15 ++++++++++++---
 1 file changed, 12 insertions(+), 3 deletions(-)
 tests:  0|6
total_score: 10/70
26e43ae
Fri 18 Aug 2023 10:32:08 PM UTC: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
06c9f08
Fri 18 Aug 2023 11:21:47 PM UTC: 
 exercises.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:42:4: error: ‘nuevoSize’ undeclared (first use in this function); did you mean ‘newSize’?
   42 |   *nuevoSize = 0;
      |    ^~~~~~~~~
      |    newSize
exercises.c:42:4: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
0420cda
Fri 18 Aug 2023 11:26:32 PM UTC: 
 exercises.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:42:4: error: ‘nuevoSize’ undeclared (first use in this function); did you mean ‘newSize’?
   42 |   *nuevoSize = 0;
      |    ^~~~~~~~~
      |    newSize
exercises.c:42:4: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
eb3c5c5
Fri 18 Aug 2023 11:27:04 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|4
total_score: 30/70
a0a7222
